--- a/views/login.jade
+++ b/views/login.jade
@@ -1,8 +1,33 @@
 extends layout
 
 block content
-	section#rol-carousel.hidden-phone
-		img(src='http://joyent.com/assets/img/homepage/background-photo.jpg')
+	section#login-area.container
+			.row
+					#service-annoucement.span8
+						.span6
+							h3 Service Announcements
+							p
+								| The future of home management technology is being created now. Comcast is bringing the power of the cloud to home management.
+					.span4
+						.inner-box
+							h3 Sign in
+							form#sign-in-form
+								label(for='username') Login Type
+								select.span4.rol-select
+									option Internet Service
+									option Ketchup
+									option Barbecue
+								label(for='username') Username
+								input#username.span4.rol-input(type='type', text='text', name='username')
+								label(for='password') Password
+								input#password.span4.rol-input(type='type', text='text', name='password')
+								br
+								#login-form-footer
+									button.btn.btn-primary(type='submit') Sign in
+									input#stay-signed(type='checkbox', value='')
+									span#stay-signed-in Stay signed in
+	.separator
+		img(src='img/shadow.png')
 	section#body.container
 		#box-row.row
 			.span3
@@ -17,6 +42,7 @@ block content
 					h3 Save time by activating online
 					.img-placeholder
 						img.span3.spacer(src='https://fiber.google.com/img/plans/tv-box.jpg')
+					| ci
 					p
 						| Comcast's advanced fiber network powers small and mid-sized companies with the solutions they need to make their businesses more productive.
 			.span3
@@ -33,26 +59,4 @@ block content
 						img.span3(src='http://www.shaw.ca/uploadedImages/Image_HDGuideSlider.jpg')
 					p
 						| We invent new technologies and drive innovation to transform the customer experience.
-		.separator
-			img(src='img/shadow.png')
-		h2.rol-h Plans & Pricing
-		#package-row.row
-			a.span3.rol-package.active(href='#')
-				h2 HOME USERS
-				span Starting from MRF 500/month
-				.arrow
-			a.span3.rol-package(href='#')
-				h2 SMALL & MEDIUM BUSINESS
-				span Starting from MRF 500/month
-			a.span3.rol-package(href='#')
-				h2 LARGE CORPORATES
-				span Starting from MRF 500/month
-		#selected-package.row.offset1.span9
-			h2.rol-h2
-				| Experience the Internet like never before. Instant downloads.
-				| Crystal clear HDTV. And endless possibilities.
-			p
-				| Up to one gigabit upload & download speed | Full channel TV lineup | 2 year contract | No data caps
-				| Nexus 7 tablet | 1 TV Box | Storage Box | Network Box | 1TB of storage across Gmail, Drive and G+ Photos •
-			p $120/mo + taxes & fees
 
