--- a/views/index.jade
+++ b/views/index.jade
@@ -5,34 +5,15 @@ block content
 		img(src='http://joyent.com/assets/img/homepage/background-photo.jpg')
 	section#body.container
 		#box-row.row
-			.span3
-				.inner-box
-					h3 Take your Internet with you
-					.img-placeholder
-						img.span3.spacer(src='http://www.shaw.ca/uploadedImages/Ecomm/Images/internet/Internet_ShawGoWiFi(1).jpg')
-					p
-						| The future of home management technology is being created now. Comcast is bringing the power of the cloud to home management.
-			.span3
-				.inner-box
-					h3 Save time by activating online
-					.img-placeholder
-						img.span3.spacer(src='https://fiber.google.com/img/plans/tv-box.jpg')
-					p
-						| Comcast's advanced fiber network powers small and mid-sized companies with the solutions they need to make their businesses more productive.
-			.span3
-				.inner-box
-					h3 Get the most out of your HD experience
-					.img-placeholder
-						img.span3(src='https://fiber.google.com/img/plans/channels.jpg')
-					p
-						| Building on a long history of success making the movies people love. Creating imaginative films to delight a growing worldwide audience.
-			.span3
-				.inner-box
-					h3 Save time by activating online
-					.img-placeholder
-						img.span3(src='http://www.shaw.ca/uploadedImages/Image_HDGuideSlider.jpg')
-					p
-						| We invent new technologies and drive innovation to transform the customer experience.
+			-if(infopics.length)
+				-each item in infopics
+					.span3
+						.inner-box
+							h3=item.name
+							.img-placeholder
+								img.span3.spacer(src="/files/" + item.image)
+							p=item.description
+			
 		.separator
 			img(src='img/shadow.png')
 		h2.rol-h Plans & Pricing
