--- a/views/press.jade
+++ b/views/press.jade
@@ -52,30 +52,4 @@ block content
 											a(href='#') Apple Unveils iOS 7
 					.span3
 						h3 Contact Us
-						ul.unstyled.thirteen
-							li
-								strong Raajje Online
-							li Fasmeeru Building, 4th Floor
-							li Boduthakurufaanu Magu
-							li Male'
-						h6 ROL Sales & Support
-						p
-							| Need service or support?
-							a(href='#') Send your request online
-							| and we'll find you a solution for you.
-						ul.unstyled.thirteen
-							li By Phone: 3335533
-							li
-								| By Email:
-								a(href='mailto: info@rol.net.mv') info@rol.net.mv
-						h6 ROL Technical Support
-						p
-							| Need service or support?
-							a(href='#') Send your request online
-							| and we'll find you a solution for you.
-						ul.unstyled.thirteen
-							li By Phone: 3335533
-							li
-								| By Email:
-								a(href='mailto: info@rol.net.mv') info@rol.net.mv
-
+						include components/contacts
