added davis, routing for packages

--- a/views/components/subnavs.jade
+++ b/views/components/subnavs.jade
@@ -1,19 +1,8 @@
-nav#sub-nav
-		.container
-				.navbar
-					ul.nav
-						li
-							a(href='rol.html') Company Overview
-						li
-							a(href='contact.html') Contact Us
-						li
-							a(href='news.html') News
-						li
-							a(href='press.html') Press Releases
-						li
-							a(href='investors.html') Investors
-						li
-							a(href='jobs.html') Jobs
-						li
-							a(href='legal.html') Legal
-
+if(navigation && navigation.length)
+	nav#sub-nav
+			.container
+					.navbar
+						ul.nav
+							-each nav in navigation
+								li
+									a(href=nav.url)=nav.text
