--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,6 +24,7 @@ html(lang='en')
 		script(src='/javascripts/bootstrap.js')
 		script(src='/javascripts/bootstrap-tour.min.js')
 		script(src='/javascripts/website.js')
+		script(src='/javascripts/davis.min.js')
 		style ul.breadcrumb li {text-transform:capitalize}
 	body
 		header#main-header.navbar.navbar-fixed-top
