--- a/views/packages.jade
+++ b/views/packages.jade
@@ -2,232 +2,39 @@ extends layout
 
 block content
 	include components/subnavs
+	script(src="/modals/packages.js")
 	section#body.container
 			#page.row
 					.pages-head.span12
 						h3 ROL Internet Packages
-				#home-users.row.package-row
-					.span12
-						h2 Home Users
-						p
-							| We offer the most affordable unlimited broadband internet access packages for your homes together with flawless speeds and highest value for money. Our packages are available for a flat monthly fee and are delivered via the CATV Network. With a customized range of home user packages to choose from, we let you enjoy broadband internet the way itâ€™s meant to be.
-					a.span4.package-box(data-toggle='modal', href='#rol-ultimate')
-						.package-box-inner
-							h3
-								| ROL Ultimate - Fiber To The Home
-							h3 Rf 499
-							p
-								| Providing dedicated internet access to the customer, ensuring very high speeds. These packages are intended...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Value Pack 256k
-							h3 Rf 299
-							p
-								| ROL Value Pack is the most ideal package in the market for parents who wish to allow their studying...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| Mega Speed 4M
-							h3 Rf 420
-							p
-								| ROL Mega Speed 4M, is the first ever package in Maldives to offer broadband internet access to home users...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Broadband 256k Value
-							h3 Rf 399
-							p
-								| This package is suitable for working people who wish to surf the internet and interact with their friends...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Broadband 512k Lite
-							h3 Rf 499
-							p
-								| Providing dedicated internet access to the customer, ensuring very high speeds. These packages are intended...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Ultimate - Fiber To The Home
-							h3 Rf 645
-							p
-								| If you are looking for a high value for money high-speed broadband internet access package, with unlimited...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Mega Pipe 1Mbps Multi
-							h3 Rf 1200
-							p
-								| Mega Pipe 1M was the first ever â€œalways onâ€ broadband internet access package in the Maldives ...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Mega Pipe 768k Solo
-							h3 Rf 995
-							p
-								| Mega Pipe 768k Solo was designed keeping in mind the traffic requirements of todayâ€™s trendy online...
-				#small-medium-business.row.package-row
-					.span12
-						h2 Small & Medium Business
-						p
-							| ROL offers a wide range of 'always on' Broadband Internet access plans designed to let you take your business online. The traffic volumes of all plans have been optimized to cater to your day-to-day Internet access needs allowing your business to increase productivity & and efficiency. Yet again, at a flat monthly fee allowing you to enjoy internet the way itâ€™s meant to be.
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Ultimate - Fiber To The Home
-							h3 Rf 499
-							p
-								| Providing dedicated internet access to the customer, ensuring very high speeds. These packages are intended...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Value Pack 256k
-							h3 Rf 299
-							p
-								| ROL Value Pack is the most ideal package in the market for parents who wish to allow their studying...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| Mega Speed 4M
-							h3 Rf 420
-							p
-								| ROL Mega Speed 4M, is the first ever package in Maldives to offer broadband internet access to home users...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Broadband 256k Value
-							h3 Rf 399
-							p
-								| This package is suitable for working people who wish to surf the internet and interact with their friends...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Broadband 512k Lite
-							h3 Rf 499
-							p
-								| Providing dedicated internet access to the customer, ensuring very high speeds. These packages are intended...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Ultimate - Fiber To The Home
-							h3 Rf 645
-							p
-								| If you are looking for a high value for money high-speed broadband internet access package, with unlimited...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Mega Pipe 1Mbps Multi
-							h3 Rf 1200
-							p
-								| Mega Pipe 1M was the first ever â€œalways onâ€ broadband internet access package in the Maldives ...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Mega Pipe 768k Solo
-							h3 Rf 995
-							p
-								| Mega Pipe 768k Solo was designed keeping in mind the traffic requirements of todayâ€™s trendy online...
-				#large-corporates.row.package-row
-					.span12
-						h2 Large Corporates
-						p
-							| Our internet connectivity solutions for large enterprises enable the ultimate power of broadband internet access for businesses. We offer the highest quality connectivity for VPN, business class video conferencing and VOIP, reliability and the best support services.
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Ultimate - Fiber To The Home
-							h3 Rf 499
-							p
-								| Providing dedicated internet access to the customer, ensuring very high speeds. These packages are intended...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Value Pack 256k
-							h3 Rf 299
-							p
-								| ROL Value Pack is the most ideal package in the market for parents who wish to allow their studying...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| Mega Speed 4M
-							h3 Rf 420
-							p
-								| ROL Mega Speed 4M, is the first ever package in Maldives to offer broadband internet access to home users...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Broadband 256k Value
-							h3 Rf 399
-							p
-								| This package is suitable for working people who wish to surf the internet and interact with their friends...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Broadband 512k Lite
-							h3 Rf 499
-							p
-								| Providing dedicated internet access to the customer, ensuring very high speeds. These packages are intended...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Ultimate - Fiber To The Home
-							h3 Rf 645
-							p
-								| If you are looking for a high value for money high-speed broadband internet access package, with unlimited...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Mega Pipe 1Mbps Multi
-							h3 Rf 1200
-							p
-								| Mega Pipe 1M was the first ever â€œalways onâ€ broadband internet access package in the Maldives ...
-					a.span4.package-box(href='#')
-						.package-box-inner
-							h3
-								| ROL Mega Pipe 768k Solo
-							h3 Rf 995
-							p
-								| Mega Pipe 768k Solo was designed keeping in mind the traffic requirements of todayâ€™s trendy online...
-	#rol-ultimate.modal.hide.fade(tabindex='-1', data-width='760')
-			.modal-header
-					button.close(type='button', data-dismiss='modal', aria-hidden='true') Ã—
-					h3 Responsive
-				.modal-body
-					.row-fluid
-						.span6
-							h4 Some Input
-							p
-								input.span12(type='text')
-							p
-								input.span12(type='text')
-							p
-								input.span12(type='text')
-							p
-								input.span12(type='text')
-							p
-								input.span12(type='text')
-							p
-								input.span12(type='text')
-							p
-								input.span12(type='text')
-						.span6
-							h4 Some More Input
-							p
-								input.span12(type='text')
-							p
-								input.span12(type='text')
-							p
-								input.span12(type='text')
-							p
-								input.span12(type='text')
-							p
-								input.span12(type='text')
-							p
-								input.span12(type='text')
-							p
-								input.span12(type='text')
-				.modal-footer
-					button.btn(type='button', data-dismiss='modal') Close
-					button.btn.btn-primary(type='button') Save changes
+				-each package in packages
+					.row.package-row
+						.span12
+							h2=package.name
+							if(package.description)
+								p=package.description
+						-each item in package.packages
+							a.span4.package-box(href=item.url, data-path=item.url, data-data=item)
+								.package-box-inner
+									h3=item.name
+									if(item.price)
+										h3=item.price
+									p=item.description
+	#modal-container
+	script
+		$(function(){
+			var app = Davis(function () {
+				this.get('/packages/:package', function (req) {
+					console.log('hehe');
+				});
+				this.get('/packages/:package/:item', function(req){
+					var path = req.path;
+					var data = $('a.package-box[data-path="'+path+'"]').data().data;
+					var modal = jade.render('package',data);
+					$("#modal-container").html(modal);
+					$("#package-modal").modal('show');
+				});
+			})
+			app.start();
+		});
 
