--- a/views/modals/package.jade
+++ b/views/modals/package.jade
@@ -1,9 +1,9 @@
 #package-modal.modal.hide.fade(tabindex='-1', data-width='760')
 		.modal-header
 				button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
-				img(src='/files/' + image)
-				h3 Responsive
+				-if(typeof image == 'string')
+					img(src='/files/' + image)
 			.modal-body
-			.modal-footer
-				button.btn(type='button', data-dismiss='modal') Close
+				div.package-row
+					h2=name
 
