--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,7 +31,7 @@ html(lang='en')
 			nav.navbar-inner
 				.container
 					a.brand(href='/')#logo
-						img(src='img/logo.png')
+						img(src='/img/logo.pngw')
 					ul.nav.pull-right
 						li
 							a(href='#') About Us
