--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,16 +31,22 @@ html(lang='en')
 			nav.navbar-inner
 				.container
 					a.brand(href='/')#logo
-						img(src='/img/logo.pngs')
+						img(src='/img/logo.png')
 					ul.nav.pull-right
 						li
-							a(href='#') About Us
+							a(href='/packages') Packages
 						li
-							a(href='#') Pay
+							a(href='/products') Products
 						li
-							a(href='#') Services
+							a(href='/services') Services
 						li
-							a(href='#') Contact
+							a(href='/pay') Pay
+						li
+							a(href='/rol') About Us
+						li
+							a(href='/jobs') Jobs
+						li
+							a(href='/contact') Contact
 		#top-space.hidden-phone
 		block content
 		footer.container
@@ -49,11 +55,9 @@ html(lang='en')
 				li
 					a(href='#') Company Info
 				li
-					a(href='#') Site Map
+					a(href='/press') News
 				li
-					a(href='#') News
-				li
-					a(href='#') Contact Us
+					a(href='/blog') Blog
 				li
 					a(href='#') Terms of Use
 				li
