--- a/views/contact.jade
+++ b/views/contact.jade
@@ -7,6 +7,38 @@ block content
 					.pages-head.span12
 						h3 Contacting ROL
 				.row.contact-row
+					.span8
+						div
+							h3 Send us a message
+							p Having any issues? check out our 
+								a(href='') frequently asked questions
+							textarea(placeholder='Please write your message').contactmsg
+							div.btn-group
+								span#submitmsg.btn.btn-primary Send Message
+								span.btn.cms-clear Clear
+						div#contact-faq.package-row
+							h2 FAQ
+							#faq
+								ul.unstyled
+									li
+										a(href='#') Apple ID Accounts
+									li Learn more about getting an Apple ID and its benefits.
+								ul.unstyled
+									li
+										a(href='#') AppleCare Protection Plan
+									li Find out how to extend your productâ€™s complimentary support.
+								ul.unstyled
+									li
+										a(href='#') Repair and Service
+									li See all your repair and service options based on your product and location.
+								ul.unstyled
+									li
+										a(href='#') Repair Status
+									li Quickly and easily get the status of one or all of your repairs.
+								ul.unstyled
+									li
+										a(href='#') Apple Support Communities
+									li Give and get help and tips from thousands of other Apple customers.
 					.span4
 						h4 Sales & Product Inquiries
 						div
@@ -26,7 +58,6 @@ block content
 								p
 									| If you are outside Maldives please call
 									strong	+960 3335533 
-					.span4
 						h4 Product & Technical Support
 						div
 							h6 ROL Technical Support
@@ -51,7 +82,6 @@ block content
 								p
 									| If you are outside Maldives please call
 									strong	+960 3335533 
-					.span4
 						h4 Corporate Address
 						ul.unstyled.thirteen
 							li
@@ -59,26 +89,4 @@ block content
 							li Fasmeeru Building, 4th Floor
 							li Boduthakurufaanu Magu
 							li Male'
-						h4 FAQ
-						#faq
-							ul.unstyled
-								li
-									a(href='#') Apple ID Accounts
-								li Learn more about getting an Apple ID and its benefits.
-							ul.unstyled
-								li
-									a(href='#') AppleCare Protection Plan
-								li Find out how to extend your productâ€™s complimentary support.
-							ul.unstyled
-								li
-									a(href='#') Repair and Service
-								li See all your repair and service options based on your product and location.
-							ul.unstyled
-								li
-									a(href='#') Repair Status
-								li Quickly and easily get the status of one or all of your repairs.
-							ul.unstyled
-								li
-									a(href='#') Apple Support Communities
-								li Give and get help and tips from thousands of other Apple customers.
 
