--- a/views/layout.jade
+++ b/views/layout.jade
@@ -53,7 +53,7 @@ html(lang='en')
 			span.pull-left © 2013 ROL
 			ul#footer-links.unstyled.pull-right
 				li
-					a(href='#') Company Info
+					a(href='/company-info') Company Info
 				li
 					a(href='/press') News
 				li
